remove unneeded files; add helper file; plugin-main only loads dll

--- a/plugins/obs-nvenc/CMakeLists.txt
+++ b/plugins/obs-nvenc/CMakeLists.txt
@@ -1,16 +1,16 @@
 project(obs-nvenc)
 
-#find_package(Libx264 REQUIRED)
-#include_directories(${LIBX264_INCLUDE_DIRS})
-#add_definitions(${LIBX264_DEFINITIONS})
-
-include_directories(libnvenc)
+set(obs-nvenc_HEADERS
+	obs-nvenc.h
+	nvEncodeAPI.h)
 
 set(obs-nvenc_SOURCES
 	obs-nvenc.c
+	obs-nvenc-helper.c
 	obs-nvenc-plugin-main.c)
 
 add_library(obs-nvenc MODULE
+	${obs-nvenc_HEADERS}
 	${obs-nvenc_SOURCES})
 target_link_libraries(obs-nvenc
 	libobs)
