started work on optional functions; by duplicating code from OBS x264 plugin; plugin now shows up as an encoder in the settings panel

--- a/plugins/obs-nvenc/CMakeLists.txt
+++ b/plugins/obs-nvenc/CMakeLists.txt
@@ -7,6 +7,7 @@ set(obs-nvenc_HEADERS
 set(obs-nvenc_SOURCES
 	obs-nvenc.c
 	obs-nvenc-helper.c
+	obs-nvenc-optional.c
 	obs-nvenc-plugin-main.c)
 
 add_library(obs-nvenc MODULE
