update cmake to latest

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ compiler:
  - clang
 
 before_script:
+ - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
+ - sudo apt-get update -qq
+ - sudo apt-get install cmake
  - mkdir build
  - cd build
  - cmake ..
