--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,12 @@ before_script:
  - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
  - sudo apt-get update -qq
  - sudo apt-get install cmake
- - mkdir build
- - cd build
- - cmake ..
 
-script: make 
+script:
+ - mkdir build && cd build && cmake .. && make 
+
+os:
+ - linux
+ - osx
+ 
+osx_image: xcode61
