i dont think this will work; Travis CI system too old (+44 squashed commits) Squashed commits: [928f896] fix qt5 ppa, 18th try [8832ff4] fix qt5 ppa, 17th try [9f2edf1] fix qt5 ppa, 16th try [38891b0] fix qt5 ppa, 15th try [9be8fd5] fix qt5 ppa, 14th try [f37c379] fix qt5 ppa, 13th try [e003894] fix qt5 ppa, 12th try [6eee761] fix qt5 ppa, 11th try [dbba469] fix qt5 ppa, 10th try [449c04f] fix qt5 ppa, 9th try [ce96159] fix qt5 ppa, 7th try [cc833f8] fix qt5 ppa, 8th try [3c5a300] fix qt5 ppa, 7th try [03d5aa5] fix qt5 ppa, 6th try [7a14d16] fix qt5 ppa, 5th try [43c6a4c] fix qt5 ppa, 4th try [6e7a717] fix qt5 ppa, 3rd try [2d2c109] fix qt5 ppa, 2nd try [eb0abc2] fix qt5 ppa, 1st try [42d7c61] fix ffmpeg ppa, last try [fcb248b] fix ffmpeg ppa, 17th try [ecc854d] fix ffmpeg ppa, 16th try [be4746c] fix ffmpeg ppa, 15th try [838dc3e] fix ffmpeg ppa, 14th try [8da69f6] fix ffmpeg ppa, 13th try [4e53807] fix ffmpeg ppa, 12th try [b984636] fix ffmpeg ppa, 11th try [ea6a88f] fix ffmpeg ppa, 10th try [ba9d5bf] fix ffmpeg ppa, 9th try [1ea2a1b] fix ffmpeg ppa, 8th try [31b94bf] fix ffmpeg ppa, 7th try [fec3d08] fix ffmpeg ppa, 6th try [1965327] fix ffmpeg ppa, 5th try [23d9aa3] fix ffmpeg ppa, 4th try [f7160ae] fix ffmpeg ppa, 3rd try [3a7bcec] fix ffmpeg ppa, 2nd try [142c0ed] fix ffmpeg ppa [66f28ce] missing other packages [01844a0] install x11 xcb for travis ci [bad6a3c] missed a tabs [41cf8ef] fix tabs to spaces [4ee4019] travis.yml branch whitelisting [8ca343f] try a different ppa [a86fea1] cmake 2.8.12 for Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,38 @@ compiler:
  - clang
 
 before_script:
- - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
+ - git submodule update
+
+ - sudo apt-get install libx11-xcb-dev
+
+ - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+ - sudo apt-get update -qq
+ - sudo apt-get install qt5-default
+
+ - sudo add-apt-repository --yes ppa:kubuntu-ppa/backports
  - sudo apt-get update -qq
  - sudo apt-get install cmake
 
+ # - sudo add-apt-repository --yes ppa:samrog131/ppa
+ - sudo add-apt-repository --yes ppa:jon-severinsson/ffmpeg
+ - sudo apt-get update -qq
+ - sudo apt-get install libavcodec-dev libavdevice-dev libavfilter-dev libavformat-dev libavutil-dev libswscale-dev libswresample-dev
+ - sudo apt-get install libx264-dev
+ - sudo apt-get install ffmpeg
+
+ - mkdir build
+ - cd build
+ - cmake ..
+
 script:
- - mkdir build && cd build && cmake .. && make 
+ - make 
 
 os:
  - linux
  - osx
- 
+
 osx_image: xcode61
+
+branches:
+ only:
+ - TravisCI
