--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
 
  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
  - sudo apt-get update -qq
- - sudo apt-get install qt5-default
+ - sudo apt-get install qtbase5-dev libqt5x11extras5-dev
 
  - sudo add-apt-repository --yes ppa:kubuntu-ppa/backports
  - sudo apt-get update -qq
