--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -268,13 +268,13 @@ target_compile_definitions(libobs
 	PUBLIC
 		HAVE_OBSCONFIG_H)
 
-if(NOT MSVC)
-	target_compile_options(libobs
-		PUBLIC
-			-mmmx
-			-msse
-			-msse2)
-endif()
+#if(NOT MSVC)
+#	target_compile_options(libobs
+#		PUBLIC
+#			-mmmx
+#			-msse
+#			-msse2)
+#endif()
 
 
 target_compile_options(libobs
